--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -1,27 +1,34 @@
-﻿<Controls:MetroWindow x:Name="metowin"
-    Height="400"
-    Title="YuLancher"
-    Width="800"
-    mc:Ignorable="d"
+﻿<Controls:MetroWindow
     x:Class="YuLauncher.Core.Window.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:YuLauncher"
-    xmlns:properties="clr-namespace:YuLauncher.Properties"
-    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight" Closing="MetroWindow_Closing">
-    <Grid Height="400" MinWidth="800" MinHeight="400" ClipToBounds="True">
+    xmlns:properties="clr-namespace:YuLauncher.Properties"
+    x:Name="metowin"
+    Title="YuLancher"
+    Width="800"
+    Height="400"
+    MinWidth="800"
+    MinHeight="400"
+    Closing="MetroWindow_Closing"
+    SizeToContent="WidthAndHeight"
+    mc:Ignorable="d">
+    <Grid
+        Height="400"
+        MinWidth="800"
+        MinHeight="400"
+        ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
-         
-            <Frame Source="Pages/MainPage.xaml" NavigationUIVisibility="Hidden"></Frame>
-           
-            </Grid>
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+            <Frame NavigationUIVisibility="Hidden" Source="Pages/MainPage.xaml" />
+
+        </Grid>
     </Grid>
 
 
