--- a/YuLauncher/Core/Window/Pages/GameListPage.xaml
+++ b/YuLauncher/Core/Window/Pages/GameListPage.xaml
@@ -1,68 +1,142 @@
-﻿<Page xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Class="YuLauncher.Core.Window.Pages.GameListPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:YuLauncher.Core.Window.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="800"
-      Style="{DynamicResource MahApps.Styles.Page}"
-      MinHeight="400" MinWidth="800"
-      UseLayoutRounding="True"
-      Title="GameListPage">
+﻿<Page
+    x:Class="YuLauncher.Core.Window.Pages.GameListPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:YuLauncher.Core.Window.Pages"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="GameListPage"
+    MinWidth="800"
+    MinHeight="400"
+    d:DesignHeight="400"
+    d:DesignWidth="800"
+    Style="{DynamicResource MahApps.Styles.Page}"
+    UseLayoutRounding="True"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
 
-        <Grid Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN1" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="あいミスR(WebRender)" Click="August_myth_Click" DataContext="あいミスR" />
+        <Grid
+            Grid.Row="0"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN1"
+                Grid.Column="0"
+                Click="August_myth_Click"
+                Content="あいミスR(WebRender)"
+                DataContext="あいミスR"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN2" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="ミナシゴノシゴト(WebRender)" Click="Minasigo_OnClick"/>
+        <Grid
+            Grid.Row="1"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN2"
+                Grid.Column="0"
+                Click="Minasigo_OnClick"
+                Content="ミナシゴノシゴト(WebRender)"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN3" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="あやかしランブル(WebRender)" Click="Ayarabu_OnClick"/>
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN3"
+                Grid.Column="0"
+                Click="Ayarabu_OnClick"
+                Content="あやかしランブル(WebRender)"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN4" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="戦国†恋姫オンラインX〜奥宴新史〜 (WebRender)" Click="Sengoku_KoiHime_OnClick"/>
+        <Grid
+            Grid.Row="3"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN4"
+                Grid.Column="0"
+                Click="Sengoku_KoiHime_OnClick"
+                Content="戦国†恋姫オンラインX〜奥宴新史〜 (WebRender)"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN5" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="DeepOne 虚無と夢幻のフラグメントR(WebRender)" Click="DeepOne_OnClick"/>
+        <Grid
+            Grid.Row="4"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN5"
+                Grid.Column="0"
+                Click="DeepOne_OnClick"
+                Content="DeepOne 虚無と夢幻のフラグメントR(WebRender)"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="5" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="GameListBTN6" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="救世少女メシアガールXおかわり (WebRender)"  Click="MesiGirl_OnClick" DataContext="救世少女メシアガールXおかわり"/>
+        <Grid
+            Grid.Row="5"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="GameListBTN6"
+                Grid.Column="0"
+                Click="MesiGirl_OnClick"
+                Content="救世少女メシアガールXおかわり (WebRender)"
+                DataContext="救世少女メシアガールXおかわり"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="backbtn" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="戻る" Click="backbtn_Click"/>
+        <Grid
+            Grid.Row="6"
+            Grid.Column="1"
+            Grid.ColumnSpan="2">
+            <Button
+                x:Name="backbtn"
+                Grid.Column="0"
+                Click="backbtn_Click"
+                Content="戻る"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
         <Grid Grid.Row="7" Grid.Column="1">
-            <Button Grid.Column="0" x:Name="BackPage" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="前のページ" Background="Blue" Click="BackPage_OnClick"/>
+            <Button
+                x:Name="BackPage"
+                Grid.Column="0"
+                Background="Blue"
+                Click="BackPage_OnClick"
+                Content="前のページ"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
         <Grid Grid.Row="7" Grid.Column="2">
-            <Button Grid.Column="0" x:Name="NextPage" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="次のページ" Background="Blue" Click="NextPage_OnClick"/>
+            <Button
+                x:Name="NextPage"
+                Grid.Column="0"
+                Background="Blue"
+                Click="NextPage_OnClick"
+                Content="次のページ"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
     </Grid>
