--- a/YuLauncher/Core/Window/Pages/MainPage.xaml
+++ b/YuLauncher/Core/Window/Pages/MainPage.xaml
@@ -1,17 +1,17 @@
 ﻿<Page
-    d:DesignHeight="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
-    d:DesignWidth="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
-    mc:Ignorable="d"
     x:Class="YuLauncher.Core.Window.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:properties="clr-namespace:YuLauncher.Properties"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    d:DesignHeight="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
+    d:DesignWidth="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -25,19 +25,18 @@
 
         <Grid Grid.Column="0" Grid.ColumnSpan="2">
             <Button
+                x:Name="GameListBTN"
                 Click="GameListBTN_OnClick"
                 Content="ゲーム一覧"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                x:Name="GameListBTN"
-                />
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-                <Grid Grid.Row="1" Grid.ColumnSpan="2">
+        <Grid Grid.Row="1" Grid.ColumnSpan="2">
             <Button
+                x:Name="StartBTN"
                 Click="StartBTN_Click"
                 Content="ゲーム一覧(R18)"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                x:Name="StartBTN"/>
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
@@ -46,11 +45,11 @@
 
 
             <Button
+                x:Name="SettingBTN"
+                Grid.Column="0"
                 Click="SettingBTN_OnClick"
                 Content="設定"
-                Grid.Column="0"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                x:Name="SettingBTN" />
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
         <Grid Grid.Row="3" Grid.ColumnSpan="2">
             <Button
@@ -59,7 +58,10 @@
                 Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        <Grid Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0">
+        <Grid
+            Grid.Row="4"
+            Grid.Column="0"
+            Grid.ColumnSpan="2">
             <Button
                 x:Name="Fav_GameList"
                 Click="Fav_GameList_OnClick"
@@ -67,12 +69,12 @@
                 Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
         </Grid>
 
-        
+
         <Grid Grid.Row="5" Grid.Column="0">
             <Label x:Name="LatestLogin" />
         </Grid>
         <Grid Grid.Row="5" Grid.Column="1">
-            <Label x:Name="TodaysLogin"/>
+            <Label x:Name="TodaysLogin" />
         </Grid>
 
     </Grid>
