--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -1,65 +1,105 @@
-﻿<Page xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"  x:Class="YuLauncher.Core.Window.Pages.SettingPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:properties="clr-namespace:YuLauncher.Properties"
-             xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" 
-             Style="{DynamicResource MahApps.Styles.Page}"
-             d:DesignHeight="400" d:DesignWidth="800" MinHeight="400" MinWidth="800" UseLayoutRounding="True">
+﻿<Page
+    x:Class="YuLauncher.Core.Window.Pages.SettingPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="http://www.caliburnproject.org"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:properties="clr-namespace:YuLauncher.Properties"
+    MinWidth="800"
+    MinHeight="400"
+    d:DesignHeight="400"
+    d:DesignWidth="800"
+    Style="{DynamicResource MahApps.Styles.Page}"
+    UseLayoutRounding="True"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="130*"/>
-            <RowDefinition Height="20*"/>
+            <RowDefinition Height="30" />
+
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="130*" />
+            <RowDefinition Height="20*" />
 
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="フルスクリーン" FontSize="18" VerticalAlignment="Top"/>
-            <CheckBox Grid.Column="1" x:Name="FullSc" Content="ON/OFF" IsChecked="False" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked" Loaded="FullSc_OnLoaded" VerticalAlignment="Top"/>
+            <TextBlock
+                Grid.Column="0"
+                VerticalAlignment="Top"
+                FontSize="18"
+                Text="フルスクリーン" />
+            <CheckBox
+                x:Name="FullSc"
+                Grid.Column="1"
+                VerticalAlignment="Top"
+                Checked="FullSc_OnChecked"
+                Content="ON/OFF"
+                IsChecked="False"
+                Loaded="FullSc_OnLoaded"
+                Unchecked="FullSc_OnUnchecked" />
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="解像度変更" Height="30" FontSize="18"/>
-            <TextBox Grid.Column="1" x:Name="TXTRES1" mah:TextBoxHelper.ClearTextButton="True" Text="1920" Loaded="TXTRES1_Loaded"/>
-            <TextBox Grid.Column="2" x:Name="TXTRES2" mah:TextBoxHelper.ClearTextButton="True" Text="1080" Loaded="TXTRES2_Loaded"/>
+            <TextBlock
+                Grid.Column="0"
+                Height="30"
+                FontSize="18"
+                Text="解像度変更" />
+            <TextBox
+                x:Name="TXTRES1"
+                Grid.Column="1"
+                mah:TextBoxHelper.ClearTextButton="True"
+                Loaded="TXTRES1_Loaded"
+                Text="1920" />
+            <TextBox
+                x:Name="TXTRES2"
+                Grid.Column="2"
+                mah:TextBoxHelper.ClearTextButton="True"
+                Loaded="TXTRES2_Loaded"
+                Text="1080" />
         </Grid>
         <Grid Grid.Row="4">
-            <Button x:Name="FCBTN" Style="{DynamicResource MahApps.Styles.Button.Flat}" Content="終了" Click="FCBTN_Click"/>
+            <Button
+                x:Name="FCBTN"
+                Click="FCBTN_Click"
+                Content="終了"
+                Style="{DynamicResource MahApps.Styles.Button.Flat}" />
         </Grid>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="NIKKEファイルロケーション" Height="30" FontSize="18"/>
-            <Button Grid.Column="1"
-                    x:Name="NIKKE_Loc_Setting"
-                    Click="NIKKE_Loc_Setting_OnClick"
-                    Content="設定"
-                    Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                    />
-            <Label Grid.Column="2" Name="N_FileTxT"></Label>
+            <TextBlock
+                Grid.Column="0"
+                Height="30"
+                FontSize="18"
+                Text="NIKKEファイルロケーション" />
+            <Button
+                x:Name="NIKKE_Loc_Setting"
+                Grid.Column="1"
+                Click="NIKKE_Loc_Setting_OnClick"
+                Content="設定"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
+            <Label Name="N_FileTxT" Grid.Column="2" />
         </Grid>
-        </Grid>
+    </Grid>
 </Page>
