--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -1,27 +1,39 @@
-﻿<Controls:MetroWindow x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:YuLauncher.Game.Window"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        mc:Ignorable="d"
-        xmlns:properties="clr-namespace:YuLauncher.Properties"
-        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-        Title="GameWindow" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Loaded="GameWindow1_Loaded" Closing="GameWindow1_Closing" WindowStyle="None">
+﻿<Controls:MetroWindow
+    x:Class="YuLauncher.Game.Window.GameWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:YuLauncher.Game.Window"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:properties="clr-namespace:YuLauncher.Properties"
+    xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+    x:Name="GameWindow1"
+    Title="GameWindow"
+    Width="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
+    Height="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
+    Closing="GameWindow1_Closing"
+    Loaded="GameWindow1_Loaded"
+    ResizeMode="CanMinimize"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
 
 
-    <DockPanel x:Name="gamedock" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
+    <DockPanel
+        x:Name="gamedock"
+        Width="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
+        Height="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}">
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="機能">
-                <MenuItem Header="Wiki" Click="WikiBTN"/>
+                <MenuItem Click="WikiBTN" Header="Wiki" />
             </MenuItem>
             <MenuItem Header="アプリケーション">
-                <MenuItem Header="設定"/>
+                <MenuItem Header="設定" />
             </MenuItem>
         </Menu>
-        
-        <wv2:WebView2 x:Name="webView" DataContext="webView"></wv2:WebView2>
+
+        <wv2:WebView2 x:Name="webView" DataContext="webView" />
 
     </DockPanel>
 
